--- a/config.ini
+++ b/config.ini
@@ -76,6 +76,8 @@ VMs = auto-a:vc-mgmt-a.site-a.vcf.lab
  core-a:vc-mgmt-a.site-a.vcf.lab
  hol-ubuntu-001:vc-wld01-a.site-a.vcf.lab
  hol-snapshot-001:vc-wld01-a.site-a.vcf.lab
+ linux-dev-0010:vc-wld01-a.site-a.vcf.lab
+ linux-dev-0011:vc-wld01-a.site-a.vcf.lab
  #Pause:10
  #core-B:vc-mgmt-b.site-b.vcf.lab
  #Pause:10
