--- a/labfiles/hol-2601-51/module 6/myFirstApp.yaml
+++ b/labfiles/hol-2601-51/module 6/myFirstApp.yaml
@@ -76,7 +76,7 @@ resources:
             ssh_pwauth: true
             users:
             - name: root
-              passwd: VMware123!
+              passwd: 
               lock_passwd: false
               shell: /bin/bash
             package_update: true
